--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="this is pexels.com clone made by AbdAlmjed">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -12,5 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="image-preview"></div>
   </body>
 </html>
